--- a/.env.testing
+++ b/.env.testing
@@ -1,8 +1,11 @@
 APP_NAME="CutCode Shop"
 APP_ENV=local
-APP_KEY=base64:7ytYUQY+wElZB2Kml+m/TOtL9JZ1vmVoFz5K0CgBRos=
+APP_KEY=base64:nleXQpYkli9Q4evSAzAFRhtmhEswx4Gb3RnpqMe/vDA=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
+LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -10,3 +13,6 @@ DB_PORT=3306
 DB_DATABASE=cutcode_shop_test
 DB_USERNAME=root
 DB_PASSWORD=1
+
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
