--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.7",
         "lee-to/moonshine": "^1.15",
         "sentry/sentry-laravel": "^2.14",
+        "spatie/laravel-model-states": "^2.4",
         "spatie/laravel-view-models": "^1.5"
     },
     "require-dev": {
